--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,10 @@
 version: '3.7'
 services:
   node:
-    image: node:lts-alpine3.12
-    user: "node"
+    build: ./gate-simulator
+    image: node-app:1.0
     ports:
       - '9999:9999'
-    working_dir: /opt/app
-    volumes:
-      - ./gate-simulator/:/opt/app
-    command: "npm start"
 
   mysql:
     image: mysql:8.0
